--- a/main.css
+++ b/main.css
@@ -74,3 +74,31 @@
     width: 650px;
     height: 26px;
 }
+
+.schedule-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-between;
+}
+.schedule-header {
+    width: 100px;
+    height: 100px;
+    border: solid 1px black;
+    background-color: #ffffff;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+}
+
+.schedule-item {
+    width: 100px;
+    height: 100px;
+    border: solid 1px black;
+    border-left: none;
+    /*margin: 5px;*/
+    background-color: #ffffff;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+}
