--- a/main.css
+++ b/main.css
@@ -75,13 +75,42 @@
     height: 26px;
 }
 
-.schedule-container {
+.schedule-hours-container {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: space-between;
 }
-.schedule-header {
+
+.schedule-hours-header {
+    width: 100px;
+    height: 20px;
+    border: solid 1px black;
+    background-color: gray;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+}
+
+.schedule-hours-item {
+    width: 100px;
+    height: 20px;
+    border: solid 1px black;
+    border-left: none;
+    background-color: gray;
+    text-align: center;
+    color: #000000;
+}
+
+
+.schedule-day-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-between;
+}
+
+.schedule-day-header {
     width: 100px;
     height: 100px;
     border: solid 1px black;
@@ -91,12 +120,11 @@
     line-height: 100px;
 }
 
-.schedule-item {
+.schedule-day-item {
     width: 100px;
     height: 100px;
     border: solid 1px black;
     border-left: none;
-    /*margin: 5px;*/
     background-color: #ffffff;
     text-align: center;
     vertical-align: middle;
