--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
     cursor: move;
     position: absolute;
     top: 113px;
-    left:100px;
+    left: 100px;
     width: 56px;
     height: 56px;
     border-radius: 50%;
@@ -10,14 +10,12 @@
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
 }
 
-#draggable.hollow
-{
+#draggable.hollow {
     cursor: default;
     background: #ececec;
 }
 
-#droptarget
-{
+#droptarget {
     height: 100px;
     width: 100%;
     margin: 5px 0;
@@ -32,8 +30,7 @@
     border-radius: 5px;
 }
 
-.demo-section
-{
+.demo-section {
     position: relative;
 }
 
@@ -67,8 +64,7 @@
     line-height: 100px;
 }
 
-.k-slider-horizontal
-{
+.k-slider-horizontal {
     display: inline-block;
     float: left;
     width: 650px;
@@ -102,7 +98,6 @@
     color: #000000;
 }
 
-
 .schedule-day-container {
     display: flex;
     flex-direction: row;
@@ -129,4 +124,44 @@
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
+}
+
+.schedule-day-item.x-1 {
+    background-color: #ffffff;
+}
+
+.schedule-day-item.x-2 {
+    background-color: #B03A5B;
+}
+
+.schedule-day-item.x-3 {
+    background-color: #674EA7;
+}
+
+.schedule-day-item.x-4 {
+    background-color: #597EAA;
+}
+
+.schedule-day-item.x-5 {
+    background-color: #6AA84F;
+}
+
+.schedule-day-item.x-1 {
+    background-color: #ffffff;
+}
+
+.multiplier.x-2 {
+    background-color: #B03A5B;
+}
+
+.multiplier.x-3 {
+    background-color: #674EA7;
+}
+
+.multiplier.x-4 {
+    background-color: #597EAA;
+}
+
+.multiplier.x-5 {
+    background-color: #6AA84F;
 }
